--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^6.0.1",
     "sass-loader": "^10.2.1",
     "vue": "^2.6.11",
+    "vue-router": "^3.1.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
