--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
+    "local-cors-proxy": "^1.1.0",
     "node-sass": "^6.0.1",
     "sass-loader": "^10.2.1",
     "vue": "^2.6.11",
